# CogSci_Nash_Equilibrium

./: Experiment Proceed  GroqAPI.md  README.md  main.py  pyproject.toml  readme_main.md
configs/: baseline.json  belief_mixed.json  llm_notom_mixed.json  llm_tom_mixed.json
results/: all_condition_summary.csv  all_round_summary.csv
results/baseline_20260508_182944/: condition_summary.csv  config.json
results/baseline_20260508_235404_seed42/: agent_summary.csv  config.json  events.csv  round_summary.csv
results/baseline_20260508_235409_seed43/: agent_summary.csv  condition_summary.csv  config.json  events.csv  round_summary.csv
results/baseline_20260508_235450_seed44/: agent_summary.csv  condition_summary.csv  config.json  events.csv  round_summary.csv
results/belief_mixed_20260508_235508_seed42/: agent_summary.csv  condition_summary.csv  config.json  events.csv  round_summary.csv
results/belief_mixed_20260508_235516_seed43/: agent_summary.csv  condition_summary.csv  config.json  events.csv  round_summary.csv
results/belief_mixed_20260508_235534_seed44/: agent_summary.csv  condition_summary.csv  config.json  events.csv  round_summary.csv
results/llm_notom_mixed_20260509_004032_seed42/: agent_summary.csv  condition_summary.csv  config.json  events.csv  predictions.csv  raw_llm_responses.json  round_summary.csv
results/llm_notom_mixed_20260509_020814_seed43/: agent_summary.csv  condition_summary.csv  config.json  events.csv  predictions.csv  raw_llm_responses.json  (+1 more)
scripts/: run_from_config.py  run_recommended_experiments.py
tests/: test_smoke.py
(+47 files in other folders)
