[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tom-public-goods"
version = "0.1.0"
description = "Theory-of-Mind multi-agent public goods simulator with optional LLM agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[project.scripts]
tom-public-goods = "tom_public_goods.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
